// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with default props 1`] = `
<div
  className="home"
>
  <div
    className="home__container"
  >
    <h1
      className="home__title"
    >
      Shorten your link....
    </h1>
    <h2
      className="home__subtitle"
    >
      Enter a url below, click generate and then use the "short" version.
    </h2>
    <UrlForm
      isBusy={false}
      onClickGenerate={[Function]}
    />
  </div>
</div>
`;

exports[`renders correctly with hasError prop set true 1`] = `
<div
  className="home"
>
  <div
    className="home__container"
  >
    <h1
      className="home__title"
    >
      Shorten your link....
    </h1>
    <h2
      className="home__subtitle"
    >
      Enter a url below, click generate and then use the "short" version.
    </h2>
    <UrlForm
      isBusy={false}
      onClickGenerate={[Function]}
    />
    <FadeIn>
      <MessageBox
        hasAdded={false}
        hasError={true}
        message="test"
        shortUrl="test"
      />
    </FadeIn>
  </div>
</div>
`;

exports[`renders correctly with isBusy prop set true 1`] = `
<div
  className="home"
>
  <div
    className="home__container"
  >
    <h1
      className="home__title"
    >
      Shorten your link....
    </h1>
    <h2
      className="home__subtitle"
    >
      Enter a url below, click generate and then use the "short" version.
    </h2>
    <UrlForm
      isBusy={true}
      onClickGenerate={[Function]}
    />
    <Loading />
  </div>
</div>
`;
